[project]
name = "umls-kg"
version = "0.1.0"
description = "Multi-modal knowledge graph system for UMLS clinical concept relevance modelling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=0.20.0",
    "dagster>=1.7.0",
    "surrealdb>=0.10.0",
    "sentence-transformers>=2.3.0",
    "networkx>=3.2.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
